--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,13 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+      - main
   pull_request:
-    branches: [ develop ]
+    branches:
+      - main
+      - develop
+  workflow_dispatch:
 
 jobs:
   build:
